force-app/main/default/objects/Primary_Competitor__c/Primary_Competitor__c.object-meta.xml
<CustomObject>
    <label>Primary Competitor</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Competitor Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Primary Competitors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>