force-app/main/default/objects/Primary_Competitor__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Primary Competitors</relationshipLabel>
    <relationshipName>Primary_Competitors1</relationshipName>
    <type>Lookup</type>
</CustomField>