force-app/main/default/objects/Primary_Competitor__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor</label>
    <referenceTo>Competitor__c</referenceTo>
    <relationshipLabel>Primary Competitors</relationshipLabel>
    <relationshipName>Primary_Competitors</relationshipName>
    <type>Lookup</type>
</CustomField>