force-app/main/default/objects/Primary_Competitor__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Primary Competitors</relationshipLabel>
    <relationshipName>Primary_Competitors</relationshipName>
    <type>Lookup</type>
</CustomField>